# lsc_api

./: LICENSE  README.md  package.json  pyproject.toml
dashboard/: README.md  index.html  package.json  socket.js  tailwind.config.js  vite.config.js
dashboard/src/: App.vue  i18n.js  index.css  main.js  socket.js
dashboard/src/components/: BottomNav.vue  Drawer.vue  DrawerNotLogged.vue  Loader.vue  LoggedInTopNav.vue  SideNav.vue
dashboard/src/locales/: ar.json  en.json
landing/: index.html  package.json  proxyOptions.js  tailwind.config.js  vite.config.js
landing/src/: App.vue  i18n.js  index.css  main.js
libs/controllers/: socket.js
lsc_api/: __init__.py  hooks.py  modules.txt  overrides.py
lsc_api/fixtures/: custom_field.json  property_setter.json  server_script.json
lsc_api/lsc_api/: attach_file.py  check_account_status.py  client_rating.py  comment_notification.py  create_case.py  create_case_study.py  create_comment.py  create_consultation.py  create_lead.py  create_legal_service.py  create_notification_token.py  create_power_of_attorny.py  disable_user.py  fcm_token.py  forget_password.py  get_allowed_services.py  get_current_requests.py  get_departments.py  get_linked_data.py  get_logged_in_user.py  get_me.py  get_paid_invoices.py  get_payment_status.py  get_power_of_attorny.py  get_previous_requests.py  get_terms.py  get_user_data.py  get_user_notifications.py  insert_signature.py  login.py  register.py  sms_api.py  tasks.py  update_user_data.py
lsc_api/utils/: error_handler.py  jwt.py
lsc_api/www/: landing.html
(+246 files in other folders)
