[project]
name = "lsc_api"
authors = [
    { name = "M", email = "ahmedmansy265@gmail.com"}
]
description = "LCS API Integration"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "firebase-admin" ,
    "taqnyat"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
